# gamepad-tv-bridge

./: .gitignore  README.md  pyproject.toml  requirements.txt
gamepad_bridge/: __init__.py  __main__.py  cli.py  daemon.py
gamepad_bridge/core/: deadzone.py  repeat.py  state.py
gamepad_bridge/input/: base.py  detector.py  evdev_reader.py  mapping.py
gamepad_bridge/output/: base.py  uinput_injector.py
gamepad_bridge/profiles/: loader.py  matcher.py  schema.py
gamepad_bridge/window/: x11_detector.py
install/: fix-permissions.sh  gamepad-tv-bridge.service  launch-stremio.sh  launch-youtube-tv.sh  serve-stremio-web.py  setup-stremio.sh  setup.sh  stremio-server.service  stremio-tv.service  stremio-web.service
profiles/: deezer.yaml  default.yaml  netflix.yaml  stremio.yaml  twitch.yaml  twitch_tv_local.yaml  youtube_tv.yaml
